Replace naive if-then-model with naive formula for skill multiplier calculation